# netranger-bot

./: .env.sample  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Procfile  README.md  kubernetes-deploy.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  pythonpackage.yml
etc/: kube-deploy.example.yaml
network-ranger/: __main__.py
network_ranger/: __main__.py  classes.py  db.py  send_email.py  subnet_calc.py
network_ranger/cogs/: background_timer.py  core.py
